complex query test

--- a/sdk/tables/aztable/recordings/TestTableClient_Cosmos/TestQueryComplexEntity-variables.yaml
+++ b/sdk/tables/aztable/recordings/TestTableClient_Cosmos/TestQueryComplexEntity-variables.yaml
@@ -1,6 +1,5 @@
 ---
 COSMOS_TABLES_ENDPOINT_SUFFIX: cosmos.azure.com
-TABLES_COSMOS_ACCOUNT_NAME: chrisstablesprim
+TABLES_COSMOS_ACCOUNT_NAME: seankaneprim
 TABLES_PRIMARY_COSMOS_ACCOUNT_KEY: Kg==
-now: "2021-05-19T11:25:36.9614656-05:00"
-randomSeed: "1621441535"
+randomSeed: "1626293165"
