--- a/sdk/tables/aztable/recordings/TestTableClient_Cosmos/TestAddComplexEntity.yaml
+++ b/sdk/tables/aztable/recordings/TestTableClient_Cosmos/TestAddComplexEntity.yaml
@@ -2,7 +2,7 @@
 version: 1
 interactions:
 - request:
-    body: '{"TableName":"gotabledak1a1arh606r"}'
+    body: '{"TableName":"gotablesnsmbvy9t1s18"}'
     form: {}
     headers:
       Accept:
@@ -19,29 +19,29 @@ interactions:
       - azsdk-go-aztable/<version> azsdk-go-aztable/<version> azcore/v0.16.2 (go1.16.5;
         Windows_NT)
       X-Ms-Date:
-      - Wed, 14 Jul 2021 17:25:01 GMT
+      - Wed, 14 Jul 2021 20:00:48 GMT
       X-Ms-Version:
       - "2019-02-02"
     url: https://seankaneprim.table.cosmos.azure.com/Tables
     method: POST
   response:
-    body: '{"TableName":"gotabledak1a1arh606r","odata.metadata":"https://seankaneprim.table.cosmos.azure.com/$metadata#Tables/@Element"}'
+    body: '{"TableName":"gotablesnsmbvy9t1s18","odata.metadata":"https://seankaneprim.table.cosmos.azure.com/$metadata#Tables/@Element"}'
     headers:
       Content-Type:
       - application/json;odata=minimalmetadata
       Date:
-      - Wed, 14 Jul 2021 17:25:01 GMT
+      - Wed, 14 Jul 2021 20:00:48 GMT
       Etag:
-      - W/"datetime'2021-07-14T17%3A25%3A01.1972104Z'"
+      - W/"datetime'2021-07-14T20%3A00%3A48.4885512Z'"
       Location:
-      - https://seankaneprim.table.cosmos.azure.com/Tables('gotabledak1a1arh606r')
+      - https://seankaneprim.table.cosmos.azure.com/Tables('gotablesnsmbvy9t1s18')
       X-Ms-Request-Id:
-      - 466b5097-f1e6-4504-8620-3602d7c59220
+      - 8df8b678-6777-4c45-a0ec-ff800cabcce0
     status: 201 Created
     code: 201
     duration: ""
 - request:
-    body: '{"Bool":true,"Byte":"c29tZWJ5dGVz","DateTime":"2021-07-13T00:00:00Z","Float":3.14159,"Integer":1,"PartitionKey":"partition","RowKey":"row","String":"someString","TimeStamp":"0001-01-01T00:00:00Z"}'
+    body: '{"Bool":true,"Byte":"c29tZWJ5dGVz","DateTime":"2021-07-13T00:00:00Z","Float":3.14159,"Integer":1,"PartitionKey":"partition","RowKey":"1","String":"someString","TimeStamp":"0001-01-01T00:00:00Z"}'
     form: {}
     headers:
       Accept:
@@ -49,7 +49,7 @@ interactions:
       Authorization:
       - sanitized
       Content-Length:
-      - "196"
+      - "194"
       Content-Type:
       - application/json
       Dataserviceversion:
@@ -60,24 +60,24 @@ interactions:
       - azsdk-go-aztable/<version> azsdk-go-aztable/<version> azcore/v0.16.2 (go1.16.5;
         Windows_NT)
       X-Ms-Date:
-      - Wed, 14 Jul 2021 17:25:02 GMT
+      - Wed, 14 Jul 2021 20:00:49 GMT
       X-Ms-Version:
       - "2019-02-02"
-    url: https://seankaneprim.table.cosmos.azure.com/gotabledak1a1arh606r
+    url: https://seankaneprim.table.cosmos.azure.com/gotablesnsmbvy9t1s18
     method: POST
   response:
     body: ""
     headers:
       Date:
-      - Wed, 14 Jul 2021 17:25:01 GMT
+      - Wed, 14 Jul 2021 20:00:48 GMT
       Etag:
-      - W/"datetime'2021-07-14T17%3A25%3A01.8787848Z'"
+      - W/"datetime'2021-07-14T20%3A00%3A49.2275720Z'"
       Location:
-      - https://seankaneprim.table.cosmos.azure.com/gotabledak1a1arh606r(PartitionKey='partition',RowKey='row')
+      - https://seankaneprim.table.cosmos.azure.com/gotablesnsmbvy9t1s18(PartitionKey='partition',RowKey='1')
       Preference-Applied:
       - return-no-content
       X-Ms-Request-Id:
-      - dd3a508c-b694-4258-9048-b60b2c3aff86
+      - 3690c62f-e50b-4ce9-9650-aa4098af7730
     status: 204 No Content
     code: 204
     duration: ""
@@ -93,18 +93,18 @@ interactions:
       - azsdk-go-aztable/<version> azsdk-go-aztable/<version> azcore/v0.16.2 (go1.16.5;
         Windows_NT)
       X-Ms-Date:
-      - Wed, 14 Jul 2021 17:25:02 GMT
+      - Wed, 14 Jul 2021 20:00:49 GMT
       X-Ms-Version:
       - "2019-02-02"
-    url: https://seankaneprim.table.cosmos.azure.com/Tables('gotabledak1a1arh606r')
+    url: https://seankaneprim.table.cosmos.azure.com/Tables('gotablesnsmbvy9t1s18')
     method: DELETE
   response:
     body: ""
     headers:
       Date:
-      - Wed, 14 Jul 2021 17:25:01 GMT
+      - Wed, 14 Jul 2021 20:00:48 GMT
       X-Ms-Request-Id:
-      - f0237e68-d7fc-4054-bcab-a510a1b1f69f
+      - b5ec22ec-5d36-4ae0-8996-a9063194fd10
     status: 204 No Content
     code: 204
     duration: ""
