--- a/eng/pipelines/templates/steps/build-test.yml
+++ b/eng/pipelines/templates/steps/build-test.yml
@@ -4,6 +4,7 @@ parameters:
   Scope: 'sdk/...'
   Image: ''
   GoVersion: ''
+  CoverageGoal: 0.80
 
 steps:
 
@@ -69,6 +70,8 @@ steps:
       # gocov converts rely on standard input
       Get-Content ./coverage.json | gocov-xml > ./coverage.xml
       Get-Content ./coverage.json | gocov-html > ./coverage.html
+      # use internal tool to fail if coverage is too low
+      ../../../tools/internal/coverage/main.go --coverage-goal={{parameters.CoverageGoal}} --package-path=.
     displayName: 'Generate Coverage XML'
     workingDirectory: '${{parameters.GoWorkspace}}sdk'
 
