--- a/eng/pipelines/templates/steps/build-test.yml
+++ b/eng/pipelines/templates/steps/build-test.yml
@@ -72,7 +72,7 @@ steps:
       Get-Content ./coverage.json | gocov-html > ./coverage.html
       # use internal tool to fail if coverage is too low
       Get-Location
-      go run ../tools/internal/coverage/main.go --coverage-goal={{parameters.CoverageGoal}} --package-path=.
+      go run ../tools/internal/coverage/main.go --coverage-goal=${{ parameters.CoverageGoal}} --package-path=.
     displayName: 'Generate Coverage XML'
     workingDirectory: '${{parameters.GoWorkspace}}sdk'
 
