updating ci.yml files, polishing script

--- a/sdk/network/armnetwork/ci.yml
+++ b/sdk/network/armnetwork/ci.yml
@@ -13,3 +13,4 @@ stages:
 - template: ../../../eng/pipelines/templates/jobs/archetype-sdk-client-samples.yml
   parameters:
     ServiceDirectory: 'network/armnetwork'
+    CoverageGoal: 0.80
