--- a/sdk/agfood/armagfood/ci.yml
+++ b/sdk/agfood/armagfood/ci.yml
@@ -13,3 +13,4 @@ stages:
 - template: ../../../eng/pipelines/templates/jobs/archetype-sdk-client-samples.yml
   parameters:
     ServiceDirectory: 'agfood/armagfood'
+    CoverageGoal: 0.80
