--- a/sdk/agrifood/armagrifood/ci.yml
+++ b/sdk/agrifood/armagrifood/ci.yml
@@ -13,3 +13,4 @@ stages:
 - template: /eng/pipelines/templates/jobs/archetype-sdk-client-samples.yml
   parameters:
     ServiceDirectory: 'agrifood/armagrifood'
+    CoverageGoal: 0.80
