--- a/sdk/azidentity/ci.yml
+++ b/sdk/azidentity/ci.yml
@@ -13,3 +13,4 @@ stages:
 - template: ../../eng/pipelines/templates/jobs/archetype-sdk-client.yml
   parameters:
     ServiceDirectory: 'azidentity'
+    CoverageGoal: 0.80
