--- a/sdk/containerregistry/armcontainerregistry/ci.yml
+++ b/sdk/containerregistry/armcontainerregistry/ci.yml
@@ -13,3 +13,4 @@ stages:
 - template: ../../../eng/pipelines/templates/jobs/archetype-sdk-client-samples.yml
   parameters:
     ServiceDirectory: 'containerregistry/armcontainerregistry'
+    CoverageGoal: 0.80
