--- a/sdk/keyvault/armkeyvault/ci.yml
+++ b/sdk/keyvault/armkeyvault/ci.yml
@@ -13,3 +13,4 @@ stages:
 - template: ../../../eng/pipelines/templates/jobs/archetype-sdk-client-samples.yml
   parameters:
     ServiceDirectory: 'keyvault/armkeyvault'
+    CoverageGoal: 0.80
