--- a/sdk/monitor/armmonitor/ci.yml
+++ b/sdk/monitor/armmonitor/ci.yml
@@ -13,3 +13,4 @@ stages:
 - template: ../../../eng/pipelines/templates/jobs/archetype-sdk-client-samples.yml
   parameters:
     ServiceDirectory: 'monitor/armmonitor'
+    CoverageGoal: 0.80
