--- a/sdk/storage/armstorage/ci.yml
+++ b/sdk/storage/armstorage/ci.yml
@@ -13,3 +13,4 @@ stages:
 - template: ../../../eng/pipelines/templates/jobs/archetype-sdk-client-samples.yml
   parameters:
     ServiceDirectory: 'storage/armstorage'
+    CoverageGoal: 0.80
