--- a/sdk/web/armweb/ci.yml
+++ b/sdk/web/armweb/ci.yml
@@ -13,3 +13,4 @@ stages:
 - template: /eng/pipelines/templates/jobs/archetype-sdk-client-samples.yml
   parameters:
     ServiceDirectory: 'web/armweb'
+    CoverageGoal: 0.80
